fix: 404 pages spacing

--- a/fieldkit/assets/styles/sections/_section-error-404.scss
+++ b/fieldkit/assets/styles/sections/_section-error-404.scss
@@ -17,6 +17,8 @@
 }
 
 .section-error-404__image {
+  margin-bottom: 40px;
+
   img {
     display: block;
     height: auto;
@@ -25,5 +27,10 @@
 }
 
 .section-error-404__link {
-  margin-top: 1em;
+  margin-top: 40px;
+  width: 100%;
+
+  @include mq($from: medium) {
+    width: auto;
+  }
 }
